wh40k-9th-ed-crusade.css
/* ... */
.sheet-sec3 {
  margin-bottom: 3rem;
  margin-left: 0.6em;
  width: 97.1%;
}

.sheet-h1_sec3_row1 {
  color: #f2f2f2;
  background-color: #211f1e;
  font-family: Roboto, sans-serif;
  font-weight: 400;
  font-size: 2rem;
  padding: 0.25em 0.25em 0.25em 0.5em;
  border-radius: 0.5em 0.5em 0 0;
}

.sheet-div_sec3_row1_head1 {
  margin-right: 8.5em;
  margin-left: 4.25em;
}

.sheet-div_sec3_row1_head2 {
  margin-right: 0.3em;
}

.sheet-h1_sec3_row2 {
  color: #f2f2f2;
  background-color: #211f1e;
  font-family: Roboto, sans-serif;
  font-weight: 400;
  font-size: 2rem;
  padding: 0.25em 0.25em 0.25em 0.5em;
  border-radius: 0;
}

.sheet-div_sec3_row2_head1 {
  margin-right: 7em;
  margin-left: 2.75em;
}

.sheet-div_sec3_row2_head2 {
  margin-right: 1.25em;
}

.sheet-h1_sec3_sub {
  background-color: #211f1e;
  border-radius: 0;
  color: #fafafa;
  font-family: Roboto, sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  padding: 0.4em 0.4em 0.6em 1em;
  display: inline;
}

.sheet-input_sec3 {
  border: solid #211f1e;
  border-width: 0px 2px 2px 2px;
  border-radius: 0;
  background: #f1e1c680;
  outline: none;
  font-size: 1.5rem;
  line-height: 1.2em;
  padding: 0.4em;
  margin-right: -0.38em;
  color: #000000;
}

.sheet-div_sec3_bottom {
  border-radius: 0 0 0.5em 0.5em;
  background: #211f1e;
  color: #000000;
  line-height: 0.75;
  margin-bottom: 3rem;
  margin-top: -1px;
}

.sheet-sec4 {
  margin-right: 0.6em;
  width: 97%;
}

.sheet-h1_sec4 {
  color: #f2f2f2;
  font-family: Roboto, sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  background-color: #211f1e;
  border: solid 1em #211f1e;
  border-radius: 0.5em 0.5em 0 0;
  width: 98.3%;
}

.sheet-input_sec4 {
  border: solid 2px #211f1e;
  border-radius: 0 0 0.5em 0.5em;
  background: #f1e1c680;
  outline: none;
  font-size: 1.5rem;
  color: #000000;
  resize: none;
  width: 98.5%;
  padding: 1.25rem;
}

.repcontrol {
  background: #211f1e;
  height: 3.5em;
}

.repcontrol_add {
  background: #211f1e;
  margin-left: 1rem;
  border: 2px solid #fafafa;
  border-radius: 50%;
  text-shadow: none;
  outline: none;
  font-family: Roboto, sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  margin-top: 0.75rem;
  transition: 0.2s ease-in-out;
  cursor: pointer;
  color: transparent;
  display: inline-block;
  line-height: 1;
  font-size: 0;
  width: 1.5rem;
  padding: 1rem;
}

.repcontrol_edit {
  background: #211f1e;
  margin-right: 1rem;
  border: 2px solid #fafafa;
  border-radius: 50%;
  text-shadow: none;
  outline: none;
  font-family: Roboto, sans-serif;
  font-weight: 400;
  font-size: 1.5rem;
  margin-top: 0.75rem;
  transition: 0.2s ease-in-out;
  cursor: pointer;
  color: transparent;
  display: inline-block;
  line-height: 1;
  font-size: 0;
  width: 1.5rem;
  padding: 1rem;
}

.repcontrol_add:after {
  color: #fafafa;
  font-size: 1.5rem;
  font-family: Pictos;
  content: '&';
}

.repcontrol_edit:after {
  color: #fafafa;
  font-size: 1.5rem;
  font-family: Pictos;
  content: 'p';
}

.repcontrol_edit:hover {
  background-color: #71a534;
}

.repcontrol_add:hover {
  background-color: #71a534;
}

.editmode ~ .repcontrol .repcontrol_edit:after {
  content: '3';
}

.repcontrol_del {
  background: #bc3531;
  margin-right: 0.5em;
  border: 2px solid #fafafa;
  border-radius: 50%;
  text-shadow: none;
  outline: none;
  transition: 0.2s ease-in-out;
  cursor: pointer;
  display: inline-block;
  width: 1.75rem;
  padding: 0.35rem;
}

.repcontrol_del:hover {
  background-color: #a6302d;
}

.repcontrol_move {
  background: #c2b634;
  margin-left: 0.5em;
  border: 2px solid #fafafa;
  border-radius: 50%;
  text-shadow: none;
  outline: none;
  transition: 0.2s ease-in-out;
  cursor: pointer;
  display: inline-block;
  width: 1.75rem;
  padding: 0.35rem;
}

.repcontrol_move:hover {
  background-color: #a69c2d;
}

.btn:focus {
  outline: none;
}

input[name='attr_expand_item'][value='1'] ~ div.sheet-expanded-view
  /*input[name='attr_expand_item'][value='0'] ~ div.sheet-collapsed-view */ {
  display: none !important;
}
/*.sheet-expandable-section:not(:hover) > .sheet-expand-button {*/
/*  opacity: 0;*/
/*}*/

.sheet-expand-control:not([value='0']) ~ .sheet-expanded-view {
  border-top: 1px solid #211f1e;
  border-bottom: 1px solid #211f1e;
  margin-bottom: 0.5em;
}

.sheet-expanded-view {
  margin-top: -0.77em;
  margin-bottom: -1.8em;
}

.sheet-expandable-section > .sheet-expand-button {
  /*display:grid;*/
  /*grid-template-columns:auto;*/
  /*grid-template-rows:auto;*/
  /*grid-template-areas:"button";*/
  /*place-items:center;*/
  /*width:auto;*/
  height: auto;

  display: inline-flex;
  place-items: flex-end;
  transition: 0.2s ease-in-out;
  padding: 0.4em 1.25em 0.4em 0.2em;
  vertical-align: top;
  width: 4.85%;
  border: 2px solid #211f1e;
  border-width: 0 2px 2px 0;
  background: #f1e1c680;
}

/*.sheet-rightrowborder {*/
/*  border: 2px solid #211f1e;*/
/*  border-width: 0 2px 2px 0;*/
/*}*/

.sheet-expand-button > span {
  font-family: pictos;
  font-size: 2rem;
  transform: rotate(-180deg);
  color: #211f1e;
  margin-left: auto;
  cursor: pointer;
  margin-bottom: 0;
}
.sheet-expandable-section > .sheet-expand-button > input[type='checkbox'] {
  opacity: 0;
  z-index: 10;
  width: 100%;
  height: 100%;
  grid-area: button;
}
.sheet-expandable-section > :not(.sheet-expand-button) {
  grid-column: 1 / -1;
}
.sheet-collapsed-view {
  display: grid;
  margin-bottom: 0.5em;
  clip-path: var(--spanPolygon);
  min-height: 15px;
}
.sheet-expandable-section > .sheet-expand-button > .sheet-expand-state {
  grid-area: button;
}
.sheet-expand-button
  > input[name='attr_expand_item'][value*='0']
  ~ .sheet-expand-state {
  transform: rotate(90deg);
}
/* ... */

